<resources>


    <string name="app_name">Righteous Fury</string>

    <!-- Navigation Drawer Strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Noodle Studios</string>
    <string name="nav_header_subtitle">noodle.studios@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_add_player">Add Player</string>
    <string name="menu_char1">Character 1</string>
    <string name="menu_char2">Character 2</string>
    <string name="menu_char3">Character 3</string>

    <!-- import Export Strings -->
    <string name="share_title">Share</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>

    <!-- Tab Strings -->
    <string name="tab_text_1">Character</string>
    <string name="tab_text_2">Inventory</string>
    <string name="tab_text_3">Skills &amp; Traits</string>

    <!-- Attribute Strings -->
    <string name="character_Name">Name</string>
    <string name="stat_ws">Weapon Skill</string>
    <string name="stat_bs">Ballistic Skill</string>
    <string name="stat_str">Strength</string>
    <string name="stat_t">Toughness</string>
    <string name="stat_ag">Agility</string>
    <string name="stat_int">Intelligence</string>
    <string name="stat_per">Perception</string>
    <string name="stat_wp">Willpower</string>
    <string name="stat_fel">Fellowship</string>

    <!-- Attribute Hints -->
    <string name="ws_hint">WS</string>
    <string name="bs_hint">BS</string>
    <string name="str_hint">Str</string>
    <string name="t_hint">T</string>
    <string name="ag_hint">Ag</string>
    <string name="int_hint">Int</string>
    <string name="per_hint">Per</string>
    <string name="wp_hint">Wp</string>
    <string name="fel_hint">Fel</string>

    <!-- HP Strings -->
    <string name="hp">Health</string>
    <string name="heal">Heal</string>
    <string name="heal_desc">When pressed, it will heal the character by 1 point</string>
    <string name="maxhp_hint">Max</string>

    <!-- Damage Strings -->
    <string name="damage">Damage</string>
    <string name="damage_desc">Pressing this will damage the character by 1 point</string>

    <!-- Fate Point Strings -->
    <string name="fp">Fate Points</string>
    <string name="fp_up_desc">Pressing this will increase the amount of FP by 1</string>
    <string name="fp_down_desc">Pressing this will decrease the amount of FP by 1</string>
    <string name="maxfp_hint">Max</string>
    <string name="fp_remaining">Fate Points: </string>

    <!-- Modifier Strings -->
    <string name="modifier">Modifier</string>

    <!-- Unskilled Strings -->
    <string name="unskilled">Unskilled</string>

    <!-- Rolling Strings -->
    <string name="roll_button_desc">Pressing this will launch the dice rolling page</string>
    <string name="roll_threshold">Roll Threshold: </string>
    <string name="roll_outcome">Roll Outcome: </string>
    <string name="roll_hit_location">Hit Location: </string>
    <string name="roll_degree_of_success">Degree: </string>
    <string name="zero_degrees_of_success">success</string>
    <string name="one_degree_of_success">1 degree of success</string>
    <string name="many_degrees_of_success"> degrees of success</string>
    <string name="zero_degrees_of_failure">failure</string>
    <string name="one_degree_of_failure">1 degree of failure</string>
    <string name="many_degrees_of_failure"> degrees of failure</string>

    <!-- Roll Buttons -->
    <string name="roll_button">Roll</string>
    <string name="reroll_button">Re-Roll</string>
    <string name="fatepoint_button">Fate Point</string>
    <string name="burn_fp_button">BURN</string>
    <string name="jamButton">Un-Jam Weapon</string>
    <string name="reload_button">Reload</string>

    <!-- Save Strings -->
    <string name="save_character">Pressing this will save the current character</string>

    <!-- Melee Weapons -->
    <string name="melee_weapon_titlecard">Melee Weapons</string>
    <string name="melee_weapon_name">Name</string>
    <string name="melee_weapon_class">Class</string>
    <string name="melee_weapon_damage">Damage</string>
    <string name="melee_weapon_type">Type</string>
    <string name="melee_weapon_penetration">Penetration</string>
    <string name="melee_weapon_special_rules">Special Rules</string>
    <string name="melee_weapon_one">Slot 1</string>
    <string name="melee_weapon_two">Slot 2</string>
    <string name="melee_weapon_three">Slot 3</string>
    <string name="melee_weapon_four">Slot 4</string>

    <!-- Missile Weapons -->
    <string name="missile_weapon_titlecard">Missile Weapons</string>
    <string name="missile_weapon_name">Name</string>
    <string name="missile_weapon_class">Class</string>
    <string name="missile_weapon_damage">Damage</string>
    <string name="missile_weapon_type">Type</string>
    <string name="missile_weapon_penetration">Penetration</string>
    <string name="missile_weapon_Range">Range</string>
    <string name="missile_weapon_rof">RoF</string>
    <string name="missile_weapon_clip">Clip</string>
    <string name="missile_weapon_rld">Reload</string>
    <string name="missile_weapon_special_rules">Special Rules</string>

    <!-- Ammo Strings -->
    <string name="ammo_title">Ammo</string>
    <string name="ammo_val_hint">No. </string>
    <string name="ammo_name">Name</string>
    <string name="ammo_Type">Type</string>
    <string name="ammo_list">Ammo:</string>

    <!-- BS Strings -->
    <string name="bs_weapon_selector_title">Weapon:</string>
    <string name="bs_ammo_selector_title">Ammo:</string>
    <string name="bs_hit_location">Hit Location:</string>

    <!-- Slot Strings -->
    <string name="slot1">Slot 1</string>
    <string name="slot2">Slot 2</string>
    <string name="slot3">Slot 3</string>
    <string name="slot4">Slot 4</string>

    <!-- xdy + z Strings -->
    <string name="dice_x">x</string>
    <string name="dice_d">d</string>
    <string name="dice_y">y</string>
    <string name="dice_plus">+</string>
    <string name="dice_z">z</string>

    <!-- RoF x/y/z Strings -->
    <string name="rof_x">x</string>
    <string name="rof_y">y</string>
    <string name="rof_z">z</string>
    <string name="rof_dash">/</string>

    <!-- Hit log Strings -->
    <string name="hit">Hit: </string>

    <!-- Class String Array -->
    <string-array name="class_array">
        <item>Melee</item>
        <item>Thrown</item>
        <item>Pistol</item>
        <item>Basic</item>
        <item>Heavy</item>
    </string-array>

    <!-- Type String Array -->
    <string-array name="type_array">
        <item>1 hand</item>
        <item>2 hand</item>
    </string-array>

    <!-- Ammo type Array -->
    <string-array name="ammo_type_array">
        <item>SP</item>
        <item>Las</item>
        <item>Bolt</item>
        <item>Launcher</item>
        <item>Plasma</item>
    </string-array>

    <!-- Reload speeds array -->
    <string-array name="reload_array">
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
    </string-array>

    <!-- Rate of Fire Strings -->
    <string name="rof_manual">Manual</string>
    <string name="rof_semiauto">Semi</string>
    <string name="rof_full">Full</string>

    <!-- Empty display -->
    <string name="empty_string">-</string>
    
</resources>
