<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab2Inventory"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/ScrollViewMasterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/MeleeParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <LinearLayout
                android:id="@+id/MeleeParentCardMasterLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/MeleeParentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/MeleeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/melee_weapon_titlecard"
                        android:textAlignment="textStart"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/MeleeParentExpandImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/MeleeTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/MeleeTitle"
                        app:srcCompat="@drawable/ic_arrow_down" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Melee1Card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardBackgroundColor="#B6B6B6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/MeleeTitle">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/Melee1Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/Melee1TitleTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="@string/melee_weapon_one"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageButton
                                    android:id="@+id/meWep1_ExpandImageButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    android:padding="8dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/Melee1TitleTextView"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_arrow_down" />

                                <TextView
                                    android:id="@+id/meWep1_NameTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="@string/melee_weapon_name"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/Melee1TitleTextView" />

                                <EditText
                                    android:id="@+id/meWep1_NameEditText"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:inputType="textPersonName"
                                    android:textAlignment="textStart"
                                    android:textSize="14sp"
                                    app:layout_constraintBottom_toBottomOf="@+id/meWep1_NameTextView"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/meWep1_NameTextView"
                                    app:layout_constraintTop_toTopOf="@+id/meWep1_NameTextView" />

                                <View
                                    android:id="@+id/meWep1_divider1"
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:background="#000000"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_NameEditText" />

                                <TextView
                                    android:id="@+id/meWep1_ClassTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/melee_weapon_class"
                                    app:layout_constraintBottom_toTopOf="@+id/meWep1_ClassEditText"
                                    app:layout_constraintEnd_toEndOf="@+id/meWep1_ClassEditText"
                                    app:layout_constraintStart_toStartOf="@+id/meWep1_ClassEditText" />

                                <EditText
                                    android:id="@+id/meWep1_ClassEditText"
                                    android:layout_width="50dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="20dp"
                                    android:inputType="textPersonName"
                                    android:textSize="14sp"
                                    app:layout_constraintEnd_toStartOf="@+id/meWep1_DamageEditText"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_divider1" />

                                <TextView
                                    android:id="@+id/meWep1_DamageTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/damage"
                                    app:layout_constraintBottom_toTopOf="@+id/meWep1_DamageEditText"
                                    app:layout_constraintEnd_toEndOf="@+id/meWep1_DamageEditText"
                                    app:layout_constraintStart_toStartOf="@+id/meWep1_DamageEditText" />

                                <EditText
                                    android:id="@+id/meWep1_DamageEditText"
                                    android:layout_width="50dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="20dp"
                                    android:inputType="textPersonName"
                                    android:textSize="14sp"
                                    app:layout_constraintEnd_toStartOf="@+id/meWep1_TypeEditText"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toEndOf="@+id/meWep1_ClassEditText"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_divider1" />

                                <TextView
                                    android:id="@+id/meWep1_TypeTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/melee_weapon_type"
                                    app:layout_constraintBottom_toTopOf="@+id/meWep1_TypeEditText"
                                    app:layout_constraintEnd_toEndOf="@+id/meWep1_TypeEditText"
                                    app:layout_constraintStart_toStartOf="@+id/meWep1_TypeEditText" />

                                <EditText
                                    android:id="@+id/meWep1_TypeEditText"
                                    android:layout_width="50dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="20dp"
                                    android:inputType="textPersonName"
                                    android:textSize="14sp"
                                    app:layout_constraintEnd_toStartOf="@+id/meWep1_PenEditText"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toEndOf="@+id/meWep1_DamageEditText"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_divider1" />

                                <TextView
                                    android:id="@+id/meWep1_PenTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/melee_weapon_penetration"
                                    app:layout_constraintBottom_toTopOf="@+id/meWep1_PenEditText"
                                    app:layout_constraintEnd_toEndOf="@+id/meWep1_PenEditText"
                                    app:layout_constraintStart_toStartOf="@+id/meWep1_PenEditText" />

                                <EditText
                                    android:id="@+id/meWep1_PenEditText"
                                    android:layout_width="50dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="20dp"
                                    android:layout_marginEnd="8dp"
                                    android:inputType="textPersonName"
                                    android:textSize="14sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toEndOf="@+id/meWep1_TypeEditText"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_divider1" />

                                <View
                                    android:id="@+id/meWep1_divider2"
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:background="#000000"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_DamageEditText" />

                                <TextView
                                    android:id="@+id/meWep1_SpecicalRulesTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="@string/melee_weapon_special_rules"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_divider2" />

                                <EditText
                                    android:id="@+id/meWep1_SpecialRulesEditText"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:inputType="textPersonName"
                                    android:textAlignment="textStart"
                                    android:textSize="14sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/meWep1_SpecicalRulesTextView" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>